# mndiag

./: COPYING  configure.ac  setup-env
port/: Makefile.in  distinfo  pkg-descr
src/: Makefile.am  diag.txt  mndiag.c  mndiag.h  mndiag_private.h  mndiagen.c
test/: Makefile.am  gendata  gendata.c  testfoo.c
